# ReinforceSdk

./: readMe.md  settings.gradle
app/: build.gradle
app/libs/: reinfoce4.aar
app/src/androidTest/java/com/example/reinforce/aar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/reinforce/aar/: MainActivity.java  MyApplication.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/reinforce/aar/: ExampleUnitTest.java
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/reinforce/sdk/: ProjectPlugin.groovy
buildSrc/src/main/groovy/com/reinforce/sdk/changemethod/: ChangeMethodBean.groovy  ChangeMethodTask.groovy  JavaChangeMethodUtils.groovy  JavaMethod.groovy  JavaMethodParser.groovy
buildSrc/src/main/groovy/com/reinforce/sdk/merge/: MergeAarBean.groovy  MergeAarTask.groovy  ZipUtils.groovy
demo_aar/: build.gradle
demo_aar/src/androidTest/java/com/example/reinforce/demo_aar/: ExampleInstrumentedTest.java
demo_aar/src/main/: AndroidManifest.xml
demo_aar/src/main/res/values/: strings.xml
demo_aar/src/noreinforce/java/com/example/reinforce/demo_aar/: SayHello.java
demo_aar/src/reinforce/java/com/example/reinforce/demo_aar/: SayHello.java
demo_aar/src/test/java/com/example/reinforce/demo_aar/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
shell/: build.gradle
shell/src/androidTest/java/com/example/reinforce/shell/: ExampleInstrumentedTest.java
shell/src/main/: AndroidManifest.xml
shell/src/main/cpp/: CMakeLists.txt  reinforce.cpp  reinforce.h
(+4 files in other folders)
